<resources>
    <string name="app_name">EazyPG Manager</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="food_long">You can see your mess details</string>
    <string name="foods">Food</string>
    <string name="rent_long">You can see your Rent and Bill Details</string>
    <string name="rents">Rent and Bill</string>
    <string name="complaints_long">You can see your complaints</string>
    <string name="complaints">Complaints</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="owner_name">Owner Name</string>
    <string name="email_address">Email Address</string>
    <string name="locality">Locality</string>
    <string name="contact">Contact</string>
    <string name="app_intro_skip">app_intro_skip</string>
    <string name="amazing_android_app_with_cool_features">Amazing android app with cool features.</string>
    <string name="food_feedback"><![CDATA[How healthy & tasty do you find the food?]]></string>
    <string name="comfort_feedback">How comfortable do you feel with all the facilities?</string>
    <string name="management_feedback">How satisfied are you with management?</string>
    <string name="hygiene_feedback">How happy you are with overall hygiene?</string>
    <string name="room_feedback">Are you happy with your room quality?</string>
    <string name="others_feedback">How do you like the PG?</string>
    <string name="default_notification_channel_id">notifictionid</string>

    <string-array name="applianceList">
        <item>AC</item>
        <item>Fan</item>
        <item>Lift</item>
        <item>Geyser</item>
        <item>Washing Machine</item>
        <item>RO</item>
        <item>Dishwasher</item>
        <item>Microwave</item>
        <item>Refrigerator</item>
        <item>TV</item>
        <item>CCTV</item>
        <item>Iron</item>
        <item>Induction</item>
        <item>Router</item>
        <item>Heater</item>
        <item>D2H</item>
        <item>Other</item>
    </string-array>
</resources>
